--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
 # Obtain a connection string for your database from the Clusters tab on the MongoDB Atlas Dashboard.
 # The connection string has the format `mongodb+srv://myDatabaseUser:D1fficultP%40ssw0rd@cluster0.example.mongodb.net/?retryWrites=true&w=majority`
 MONGODB_URI=your-string-here
+MONGODB_DB=better-auth # optional, defaults to "better-auth"
+
+# Better Auth Configuration
+BETTER_AUTH_URL=http://localhost:3000
+BETTER_AUTH_SECRET=your-secure-secret-key-here-minimum-32-characters
+
+# GitHub OAuth (required for social login)
+GITHUB_CLIENT_ID=your-github-client-id
+GITHUB_CLIENT_SECRET=your-github-client-secret
