--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "lucide-react": "^0.510.0",
     "mongodb": "^6.3.0",
     "next": "15.1.6",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.8"
