refactor: enhance base URL retrieval logic for better deployment support

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ MONGODB_URI=your-string-here
 MONGODB_DB=better-auth # optional, defaults to "better-auth"
 
 # Better Auth Configuration
-BETTER_AUTH_URL=http://localhost:3000
+BETTER_AUTH_URL=http://localhost:3000 # optional, auto-detected on Vercel
 BETTER_AUTH_SECRET=your-secure-secret-key-here-minimum-32-characters
