--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
     "mongodb": "^6.3.0",
-    "next": "15.1.6",
+    "next": "^15.1.9",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
